# crabir

./: .env  .gitignore  Cargo.toml  Makefile  README.md  changelog.md  devenv.nix  devenv.yaml  flake.nix  local.properties  toolchain.toml
.github/: dependabot.yml  test_build.yml
.github/workflows/: test_build.yaml
crabir/: README.md  build.yaml  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  log  pubspec.yaml  todo
crabir/android/app/: build.gradle  build.gradle.kts
crabir/assets/: rust-licenses.json
crabir/assets/values/: ic_launcher_background.xml
crabir/integration_test/: simple_test.dart
crabir/ios/Runner/: Info.plist
crabir/ios/Runner.xcodeproj/: project.pbxproj
crabir/lib/: accounts_manager.dart  base_feeds.dart  bordered_text.dart  buttons.dart  cartouche.dart  comment.dart  drawer.dart  feed_list.dart  flair.dart  hexcolor.dart  html_view.dart  loading_indicator.dart  login.dart  main.dart  markdown_render.dart  network_status.dart  report.dart  routes.dart  separated_row.dart  sort.dart  subreddit.dart  subscriptions_tab.dart  tabs_index.dart  time_ellapsed.dart  user.dart
crabir/lib/accounts/: login.dart  user_account.dart  user_account.freezed.dart  user_account.g.dart
crabir/lib/drawer/: base_feeds.dart  drawer.dart  drawer_feed_selection.dart  drawer_state.dart  options.dart
crabir/lib/feed/: common.dart  feed.dart  feed.go_route_ext.dart  feed_new.dart  gif.dart  html_with_fade.dart  image.dart  multi.dart  post.dart  scroll_aware_fab.dart  search.dart  sort_display.dart  sort_menu.dart  top_bar.dart  video.dart
crabir/lib/gallery/: full_screen_gallery_view.dart  gallery.dart  gallery.go_route_ext.dart
crabir/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart
crabir/lib/markdown_editor/: comment_editor.dart  crosspost_editor.dart  editor.dart  editor.go_route_ext.dart  post_editor.dart
crabir/lib/media/: fullscreen_media_view.dart  gif.dart  image.dart  media.dart  media.go_route_ext.dart  resolution.dart  streamable.dart
crabir/lib/post/: compact_card.dart  dense_card.dart  post.dart  post_card.dart
crabir/linux/: CMakeLists.txt
crabir/rust_builder/: pubspec.yaml
crabir/test/: widget_test.dart
crabir/web/: index.html  manifest.json
crabir/windows/: CMakeLists.txt
crabir_bridge/: Cargo.toml
crabir_bridge/src/: frb_generated.rs  lib.rs
crabir_bridge/src/api/: media.rs  mod.rs  reddit_api.rs  simple.rs  stream.rs
flutter_getter/: Cargo.toml
flutter_getter/src/: generate.rs  lib.rs
licenses_packer/: Cargo.toml
licenses_packer/src/: main.rs
reddit_api/: Cargo.toml
reddit_api/src/: client.rs  error.rs  lib.rs  listing_stream.rs  paging_handler.rs  reportable.rs  search.rs  streamable.rs  utils.rs  votable.rs
reddit_api/src/model/: author.rs  comment.rs  feed.rs  flair.rs  gallery.rs  mod.rs  multi.rs  post.rs  rule.rs  subreddit.rs  user.rs
reddit_api/src/model/user/: client.rs  mod.rs  model.rs  streams.rs
(+168 files in other folders)
